--- a/app/sass/pages/_main.sass
+++ b/app/sass/pages/_main.sass
@@ -73,34 +73,25 @@ button
   &:hover,
   &:focus
     outline: none
-%btn-clear
-  padding: 0
-  box-shadow: none
-  background: transparent
-  border: 0 none
-  cursor: pointer
-%tdn
-  text-decoration: none
-  &:hover,
-  &:focus
-    text-decoration: none
 .btn
   position: relative
   display: inline-flex
   justify-content: center
   align-items: center
   margin-bottom: 25px
-  padding: 10px 22px
-  @extend %btn-clear
+  padding: 10px 22px 
+  border: 0 none
   min-height: 61px
   box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.5), inset 0 0 2px rgba(227, 145, 101, 0.29)
   background-image: linear-gradient(to top, #bc692b 0%, #cf752f 35%, #f4ab59 78%, #fcd29d 100%)
   background-position: 50% 0%
   border-radius: 61px
-  @extend %tdn
+  white-space: normal
   font: 700 18px/24px $main-font
   text-shadow: 0 1px 0 #853e09, 0 0 29px rgba(255, 255, 255, 0.35);
   color: #fff
+  cursor: pointer
+  text-decoration: none
   transition: all .3s ease-out
   &:before,
   &:after
@@ -131,6 +122,8 @@ button
     background-image: linear-gradient(to top, #bc692b 0%, #cf752f 35%, #f4ab59 78%, #fcd29d 100%) !important
     background-position: 50% 100%
     box-shadow: none
+    color: #fff
+    text-decoration: none
   &:active
     &:before,
     &:after
@@ -139,6 +132,9 @@ button
     width: 100%
   &--sm
     max-width: 220px
+.btn-groups
+  position: relative
+  z-index: 1
 +r(768)
   .btn
     font-size: 20px
